add jwt to access Post's api routes
